[gd_scene load_steps=14 format=3 uid="uid://cx3wqu64bykqr"]

[ext_resource type="Script" path="res://GameObjects/Shop/ShopItem.gd" id="1_kfllk"]
[ext_resource type="Shader" path="res://GameAssets/Shaders/Highlight.gdshader" id="1_wo701"]
[ext_resource type="Texture2D" uid="uid://d4avqbsnyl724" path="res://GameAssets/Items/Weapon/prototype knife.png" id="2_k1x7m"]
[ext_resource type="PackedScene" uid="uid://dn2cspiqg0wsk" path="res://GameObjects/Items/Dagger.tscn" id="2_s5c67"]
[ext_resource type="Theme" uid="uid://dj388qh6rsv5c" path="res://GameAssets/UI/Themes/GameText.tres" id="4_37t3g"]
[ext_resource type="Texture2D" uid="uid://cms4pofmnuy0o" path="res://GameAssets/Items/Gold/coin0.png" id="5_lg6fl"]
[ext_resource type="AudioStream" uid="uid://dhpp16gds6xl" path="res://GameAssets/SFX/Player/InvalidPurchase.wav" id="7_a4p0s"]
[ext_resource type="AudioStream" uid="uid://d0sxda65thv66" path="res://GameAssets/SFX/Player/Retro Magic 06.wav" id="8_6myjg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a4nd5"]
radius = 27.074

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3tksx"]
shader = ExtResource("1_wo701")
shader_parameter/size_effect = 0.1
shader_parameter/speed = 1.0
shader_parameter/highlight_strength = 0.5
shader_parameter/color_mode_toggle = false
shader_parameter/is_horizontal = false

[sub_resource type="Animation" id="Animation_m33yh"]
resource_name = "Idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5dera"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nf1y6"]
_data = {
"Idle": SubResource("Animation_m33yh"),
"RESET": SubResource("Animation_5dera")
}

[node name="ShopItem" type="Area2D"]
script = ExtResource("1_kfllk")
item_sold = ExtResource("2_s5c67")
item_group = "weapon"
item_description = "the developer didnt add a description for this item :("

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a4nd5")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_3tksx")
texture = ExtResource("2_k1x7m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nf1y6")
}
autoplay = "Idle"

[node name="CostContainer" type="HBoxContainer" parent="."]
offset_left = -12.0
offset_top = 7.0
offset_right = 13.0
offset_bottom = 17.0
theme_override_constants/separation = 2
alignment = 1

[node name="Label" type="Label" parent="CostContainer"]
layout_mode = 2
theme = ExtResource("4_37t3g")
theme_override_font_sizes/font_size = 8
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CostContainer"]
layout_mode = 2
texture = ExtResource("5_lg6fl")
stretch_mode = 3

[node name="Instructions" type="Label" parent="."]
visible = false
offset_left = -42.0
offset_top = -21.0
offset_right = 54.0
offset_bottom = 2.0
theme = ExtResource("4_37t3g")
text = "Press 'F' to purchase!"

[node name="InvalidPurchase" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_a4p0s")

[node name="Appear" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6myjg")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
